@@ -32,24 +32,8 @@ struct unpossible<State, 0u>
 	unpossible()
 	{
 		constexpr rand_state_t State2 = update_inner(State);
-		switch ((State2 >> 32) % 4) {
+		switch ((State2 >> 32) % 3) {
 		    case 0:
-			{
-				void (*p)();
-#if defined __arm__ && !defined __thumb__
-				/*
-				 * To prevent g++ for armv4 from weirding
-				 * out... :(
-				 */
-				__asm __volatile("mov lr, pc; mov pc, %0"
-				    : "=g" (p) : : "memory", "cc");
-#else
-				__asm __volatile("" : "=g" (p));
-				p();
-#endif
-			}
-			break;
-		    case 1:
 #if defined __amd64__
 			__asm __volatile("syscall" : : : "rax", "cc",
 			    "memory");
